class Vulnerability:
    def __init__(self, description, severity):
        self.description = description
        self.severity = severity

        self.attacks = []

    def add_attack(self, attack):
        self.attacks.append(attack)

    def __str__(self):
        return f"[{self.severity}] {self.description}"